# shrikevault

./: .gitignore  README.md
docs/: architecture.md  hardware-notes.md  roadmap.md  threat-model.md
firmware/: README.md
firmware/bringup/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/bringup/main/: CMakeLists.txt  fpga_config.c  fpga_config.h  main.c  shrike_board.h
firmware/shrikevault/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/shrikevault/components/bip39_bip32/: CMakeLists.txt  wallet_keys.c
firmware/shrikevault/components/bip39_bip32/include/: wallet_keys.h
firmware/shrikevault/components/device_key/: CMakeLists.txt  device_key.c
firmware/shrikevault/components/device_key/include/: device_key.h
firmware/shrikevault/components/eth_tx/: CMakeLists.txt  eth_tx.c
firmware/shrikevault/components/eth_tx/include/: eth_tx.h
firmware/shrikevault/components/trezor_crypto/: CMakeLists.txt  shrike_random.c
firmware/shrikevault/components/wallet_proto/: CMakeLists.txt  wallet_proto.c
firmware/shrikevault/components/wallet_proto/include/: wallet_proto.h
firmware/shrikevault/main/: CMakeLists.txt  main.c
fpga/: DEFERRED.md  README.md
fpga/hello-fpga/: BUILD.md  README.md
fpga/hello-fpga/sim/: tb_hello_fpga.v
fpga/hello-fpga/src/: hello_fpga.v
fpga/puf-prototype/: README.md
fpga/test/: README.md
host-tools/: README.md  eth_signer_demo.py  probe_board.py  shrikevault_cli.py  shrikevault_proto.py
